221212 added Ticket notifications

--- a/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Areas/Identity/Pages/Account/Register.cshtml
@@ -53,6 +53,7 @@
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
             <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary rounded-pill">Register</button>
+            <a asp-action="Index" asp-controller="Home" class="w-100 btn btn-lg btn-secondary rounded-pill my-2">Cancel</a>
         </form>
         <!-- ./ form -->
 
