--- a/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Areas/Identity/Pages/Account/Login.cshtml
@@ -21,14 +21,14 @@
         </div>*@
         <!-- ./ logo -->
 
-
-        <h5>Sign in</h5>
-
         <!-- form -->
         <section>
             <form id="account" method="post">
-                <h2>Use a local account to log in.</h2>
+
+                <h1>Welcome back!</h1>
+                <h4>Log In</h4>
                 <hr />
+
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <div class="form-floating">
                     <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" />
@@ -51,7 +51,7 @@
                 <div>
                     <button id="login-submit" type="submit" class="w-100 btn btn-lg btn-primary rounded-pill">Log in</button>
                 </div>
-                <div>
+                <div class="container my-3">
                     <p>
                         <a id="forgot-password" asp-page="./ForgotPassword">Forgot your password?</a>
                     </p>
