--- a/Views/Projects/Details.cshtml
+++ b/Views/Projects/Details.cshtml
@@ -16,7 +16,7 @@
                                                     
 }
 
-<h1>Details</h1>
+<h1>Project Details</h1>
 
 <div>
     <div class="container-fluid">
@@ -33,11 +33,16 @@
                                 <span class="progress-badge" style="font-size:small">Project Status</span>
                                 <div class="progress">
                                     @* Razor code block *@
-                                    @*[Progress Bar code]*@
-                                    @*<div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: @percent%;">
-                                        Use Progress Bar code variable here
-                                        <span class="progress-value">100%</span>
-                                    </div>*@
+                                    @{
+                                        var start = Model.StartDate;
+                                        var end = Model.EndDate;
+                                        var today = DateTime.Now;
+                                        var percent = today >= end ? 100 : today < start ? 0 : Math.Round((today.Subtract(start)) / (end.Subtract(start)) * 100);
+                                    }
+                                    <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: @percent%;">
+                                        @* Use Progress Bar code variable here *@
+                                        <span class="progress-value">@percent%</span>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -165,7 +170,7 @@
                                                     {
                                                         if (User.IsInRole(nameof(BTRoles.Admin)) || User.IsInRole(nameof(BTRoles.ProjectManager)))
                                                         {
-                                                            <a class="btn btn-xs btn-info" asp-action="AssignDeveloper" asp-controller="Tickets" asp-route-ticketId="@ticket.Id">Assign Dev</a>
+                                                            <a class="btn btn-xs btn-info" asp-action="AssignDeveloper" asp-controller="Tickets" asp-route-id="@ticket.Id">Assign Dev</a>
                                                         }
 
                                                     }
