--- a/Views/Tickets/Details.cshtml
+++ b/Views/Tickets/Details.cshtml
@@ -20,18 +20,22 @@
 							<h5>@Model.Title</h5>
 							@*Description of Ticket*@
 							<p>@Model.Description</p>
-							<div class="progress-container progress-info m-b-25">
-															@*Project Name and information*@
-								<span class="progress-badge" style="font-size:small">Project: @Model.Project!.Name</span>
-								<div class="progress">
-									@*Progress bar logic*@
-																						@*Variable from razor logic*@
-									<div class="progress-bar" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" style="width: [Percent]%;">
-													@*Variable from razor logic*@
-										<span class="progress-value">[Percent]%</span>
-									</div>
-								</div>
-							</div>
+                            <div class="progress-container progress-info m-b-25">
+                                <span class="progress-badge" style="font-size:small">Project Status</span>
+                                <div class="progress">
+                                    @* Razor code block *@
+                                    @{
+                                        //var start = Model.StartDate;
+                                        //var end = Model.EndDate;
+                                        //var today = DateTime.Now;
+                                        //var percent = today >= end ? 100 : today < start ? 0 : Math.Round((today.Subtract(start)) / (end.Subtract(start)) * 100);
+                                    }
+                                    @*<div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: @percent%;">*@
+                                        @* Use Progress Bar code variable here *@
+                                        @*<span class="progress-value">@percent%</span>*@
+                                    </div>
+                                </div>
+                            </div>
 						</div>
 					</div>
 					<div class="card col m-1 p-2">
@@ -85,8 +89,9 @@
                                         </div>
                                         <!-- End Comment Respond  -->
                                     }
-								<hr />
+								    <hr />
 									<h6>Comments</h6>
+                                    <h5 class="title">@Model.Comments!.Count comments</h5>
 									<ul class="right_chat list-unstyled mb-0">
 										@*Loop to show comments made for the Ticket*@
                                         <!-- display each comment -->
@@ -113,7 +118,7 @@
                                                                     <div class="">
                                                                         <a class="" asp-controller="TicketComments" asp-action="Edit" asp-route-id="@comment.Id">
                                                                             <span class="">
-                                                                                <span data-text="Edit">Edit</span>
+                                                                                <span data-text="Edit">Edit</span> |
                                                                             </span>
                                                                         </a>
                                                                         <a class="" asp-controller="TicketComments" asp-action="Delete" asp-route-id="@comment.Id">
@@ -217,7 +222,6 @@
 				</div>
 			</div>
 		</div>
-	</div>
 </div>
 
 
