--- a/Views/Tickets/UnassignedTickets.cshtml
+++ b/Views/Tickets/UnassignedTickets.cshtml
@@ -1,4 +1,5 @@
 ﻿@model IEnumerable<BugTrackerMVC.Models.Ticket>
+@using BugTrackerMVC.Models.Enums
 
 @{
     ViewData["Title"] = "Unassigned Tickets";
@@ -67,6 +68,17 @@
                                         @Html.DisplayFor(modelItem => item.Title)
                                     </td>
                                     <td>
+                                        @if (item.DeveloperUser is null && User.IsInRole(nameof(BTRoles.Admin)))
+                                        {
+                                            <a class="btn btn-sm btn-outline-info" asp-action="AssignDeveloper" asp-route-id="@item.Id">Assign Dev</a>
+                                        }
+                                        else
+                                        {
+                                            <text>@(item.DeveloperUser?.FullName ?? "Unassigned")</text>
+                                            <a class="btn btn-sm btn-outline-success" asp-action="AssignDeveloper" asp-route-id="@item.Id">Manage Dev</a>
+                                        }
+                                    </td>
+                                    <td>
                                         @Html.DisplayFor(modelItem => item.Description)
                                     </td>
                                     <td>
@@ -103,7 +115,7 @@
                                         <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
                                         <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
                                         <a asp-action="Archive" asp-route-id="@item.Id">Archive</a> |
-                                        <a asp-action="AssignDeveloper" asp-route-id="@item.Id">Assign Developer(s)</a>
+                                        @*<a asp-action="AssignDeveloper" asp-route-id="@item.Id">Assign Developer(s)</a>*@
                                     </td>
                                 </tr>
                             }
