--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -36,6 +36,11 @@
     <link rel="stylesheet" href="/css/site.css" />
 </head>
 
+@*@if (User.IsInRole("Admin"))
+  {
+        <a asp-action="Create" asp-controller="Invites">Company Invite</a>
+  }*@
+
 @*<body>
 
     <partial name="_LoginPartial" />
@@ -1781,6 +1786,9 @@
     <!-- App scripts -->
     <script src="../../assets/js/app.min.js"></script>
     <!--------------------- Gogi scripts end ------------------------------->
+
+    <!-- Sweet Alerts -->
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
