--- a/Views/Invites/ProcessInvite.cshtml
+++ b/Views/Invites/ProcessInvite.cshtml
@@ -1,6 +1,8 @@
-﻿@{
+﻿@model BugTrackerMVC.Models.Invite
+
+@{
     ViewData["Title"] = "Process Invite";
-    Layout = null;
+    Layout = "/Views/Shared/_LoginLayout.cshtml";
 }
 
 <div class="panel card-sign">
