--- a/Views/Shared/_LoginPartial.cshtml
+++ b/Views/Shared/_LoginPartial.cshtml
@@ -32,8 +32,7 @@
             </div>
             <div class="list-group">
                 @*<a href="profile.html" class="list-group-item">View Profile</a>*@
-                <a class="dropdown-item list-group-item text-danger" href="javascript:document.getElementById('logoutForm').submit()"
-                data-sidebar-target="#settings">Sign Out!</a>
+                <a class="dropdown-item list-group-item text-danger" href="javascript:document.getElementById('logoutForm').submit()">Sign Out!</a>
             </div>
         </div>
     </li>
