--- a/Areas/Identity/Pages/Account/RegisterByInvite.cshtml
+++ b/Areas/Identity/Pages/Account/RegisterByInvite.cshtml
@@ -2,7 +2,7 @@
 @model RegisterByInviteModel
 @{
     ViewData["Title"] = "Register By Invite";
-    Layout = "/Views/Shared/_LoginLayout.cshtml";
+    Layout = null;
 }
 
 <h1>@ViewData["Title"]</h1>
