--- a/Views/Invites/Create.cshtml
+++ b/Views/Invites/Create.cshtml
@@ -21,23 +21,23 @@
                     <div class="col-md-4">
                         <label class="mg-b-0">Email</label>
                     </div>
-                    <div class="col-md-8 mg-t-5 mg-md-t-0">
+                    <div class="col-md-8 mg-t-5 mg-md-t-0 my-2">
                         <input type="email" asp-for="InviteeEmail" class="form-control" placeholder="Enter email">
                     </div>
                 </div>
-                <div class="row row-xs align-items-center mg-b-20">
+                <div class="row row-xs align-items-center mg-b-20 my-2">
                     <div class="col-md-4">
                         <label class="mg-b-0">First Name</label>
                     </div>
-                    <div class="col-md-8 mg-t-5 mg-md-t-0">
+                    <div class="col-md-8 mg-t-5 mg-md-t-0 my-2">
                         <input type="text" asp-for="InviteeFirstName" class="form-control" placeholder="Enter first name">
                     </div>
                 </div>
-                <div class="row row-xs align-items-center mg-b-20">
+                <div class="row row-xs align-items-center mg-b-20 my-2">
                     <div class="col-md-4">
                         <label class="mg-b-0">Last Name</label>
                     </div>
-                    <div class="col-md-8 mg-t-5 mg-md-t-0">
+                    <div class="col-md-8 mg-t-5 mg-md-t-0 my-2">
                         <input type="text" asp-for="InviteeLastName" class="form-control" placeholder="Enter last name">
                     </div>
                 </div>
@@ -45,7 +45,7 @@
                     <div class="col-md-4">
                         <label class="mg-b-0">Select Project</label>
                     </div>
-                    <div class="col-md-8 mg-t-5 mg-md-t-0">
+                    <div class="col-md-8 mg-t-5 mg-md-t-0 my-2">
                         <select class="form-control" asp-for="ProjectId" asp-items="@ViewBag.ProjectId">
                             <option value="">Select Project</option>
                         </select>
@@ -55,14 +55,14 @@
                     <div class="col-md-4">
                         <label class="mg-b-0">Message</label>
                     </div>
-                    <div class="col-md-8 mg-t-5 mg-md-t-0">
+                    <div class="col-md-8 mg-t-5 mg-md-t-0 my-2">
                         <textarea asp-for="Message" multiple="multiple" class="form-control"></textarea>
                     </div>
                 </div>
                 <div class="form-group row justify-content-end mb-0">
-                    <div class="col-md-8 pl-md-2">
-                        <input type="submit" class="btn ripple btn-primary pd-x-30 mg-r-5" value="Send Invite" />
-                        <button class="btn ripple btn-secondary pd-x-30">Cancel</button>
+                    <div class="col-md-8 pl-md-2 my-2">
+                        <input type="submit" class="btn ripple btn-primary pd-x-30 mg-r-5 rounded-pill" value="Send Invite" />
+                        <a asp-action="Index" asp-controller="Invites" class="btn ripple btn-secondary pd-x-30 rounded-pill">Cancel</a>
                     </div>
                 </div>
             </form>
